timeline width fixed by wrapping tag list

--- a/src/App.css
+++ b/src/App.css
@@ -377,13 +377,16 @@ a {
   font-size: 15px;
   text-align: center;
   color: inherit;
+  white-space: nowrap;
 }
 
 .catButtonBig a:not(:first-child),
 .catButtonBig p:not(:first-child) {
   padding-left: 10px;
 }
-
+.noPadding {
+  padding: 5px;
+}
 .standardButton {
   border-radius: 40px;
   border: 1.5px solid rgba(0, 0, 0, 1);
